# offboard_control

./: CMakeLists.txt  package.xml
config/: trajectoryParameters.yaml  trajectoryParametersSpline.yaml
launch/: offboard_control.launch.py  offboard_control_spline.launch.py
src/: offboard_control_quintic.cpp  offboard_control_spline.cpp
